Added HTML and CSS

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
 
+li {
+    
+    display: inline;
+    list-style-type: none;
+    font-size: 40px;
+    
+  }
+
+  nav {
+    background-color: lightcoral;
+
+  }
+
 .text-center{
     text-align: center;
 }
