--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,21 @@ li {
   }
 
   p,
-  h2 {
+  h2,
+  figcaption {
     text-align: center;
   }
+
+footer {
+    display: block;
+    background-color: lightcoral;
+}
+
+form {
+    margin: auto;
+    width: 250px;
+    border: 3px solid blue;
+}
 
   /* Class selector */
 .text-center{
@@ -35,6 +47,10 @@ li {
     margin: 20px auto;
     
   }
+
+.bottom {
+    background-color: aqua;
+}
 
 #image-1 {
     display: block;
